--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-node_js:
-- "4.0"
-- "0.12"
-- "0.11"
-- "0.10"
+sudo: false
 language: node_js
+node_js:
+  - '8'
+install:
+  - npm i npminstall && npminstall
+script:
+  - npm run test
+#after_script:
+#  - npminstall codecov && codecov
