--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postcss-px-resize",
   "description": "Postcss version of px-resize",
-  "version": "0.3.0",
+  "version": "0.0.2",
   "homepage": "https://github.com/wh8766/postcss-px-resize",
   "author": "w.hao <wh8766@qq.com>",
   "repository": {
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "postcss": "^5.0.0",
-    "css": "~2.2.0",
     "extend": "~3.0.0"
   },
   "devDependencies": {
@@ -25,7 +24,5 @@
     "px-resize",
     "postcss-plugin"
   ],
-  "license": "MIT",
-  "_from": "",
-  "_resolved": ""
+  "license": "MIT"
 }
